@@ -87,9 +87,6 @@ unsigned char Test23[] = { 0x43, 0x58, 0x44, 0x32, 0x39 ,0x34, 0x30, 0x51 };
 // so (PSXCLK / 75) / BIAS = cdr read time (linuzappz)
 #define cdReadTime ((PSXCLK / 75) / BIAS)
 
-#define btoi(b)     ((b)/16*10 + (b)%16)    /* BCD to u_char */
-#define itob(i)     ((i)/10*16 + (i)%10)    /* u_char to BCD */
-
 static struct CdrStat stat;
 static struct SubQ *subq;
 
