@@ -5,6 +5,7 @@ January 23, 2010 Wei Mingzhi <weimingzhi@gmail.com>
  * libpcsxcore/ppf.c: Added PPF patch support.
  * libpcsxcore/ppf.h: Likewise.
  * libpcsxcore/cdrom.c: Likewise.
+ * libpcsxcore/cdrom.h: Likewise.
  * libpcsxcore/misc.c: Likewise.
  * libpcsxcore/r3000a.c: Likewise.
  * libpcsxcore/psxcommon.h: Likewise.
